Fix collapse width

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -9,7 +9,6 @@ $main-color : #FF6060;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 100%;
         padding: 10px;
         border-radius: 5px;
         background-color: $main-color;
