--- a/src/pages/Accomodation/Accomodation.scss
+++ b/src/pages/Accomodation/Accomodation.scss
@@ -90,7 +90,7 @@ $main-color : #FF6060;
         .accomodation__collapses {
             display: flex;
             justify-content: space-between;
-            gap: 100px;
+            gap: 74px;
         }
     }
 }
